# hali

./: README.md  Tiltfile  setup.bat  setup.sh
api-gateway/: Dockerfile  build.gradle
api-gateway/.github/workflows/: build.yaml
client-service/: .gitignore  Dockerfile  README.md  build.gradle
client-service/.github/workflows/: build.yml  test.yml
comms-service/: Dockerfile  README.md  build.gradle  settings.gradle
infra/: .gitignore  README.md  clusterrole.yaml  compose.yaml
infra/argocd/: scrooge-bank-prod.yaml
infra/tf-aws/: .terraform.lock.hcl  README.md  main.tf  provider.tf
k8s/: README.md
lambdas/: lambda_function.py  process_monetary_transactions.py
logs-service/: .gitignore  Dockerfile  HELP.md  README.md  build.gradle
scripts/: deploy-sidecar.sh  test-integration.sh
sidecar/: .clangd  CMakeLists.txt  Dockerfile  Makefile  config.h  main.cpp
sidecar/.cache/clangd/index/: config.h.4A8C3EE7BB49BC08.idx  log_entry.h.2544CFC44876BFF0.idx  log_watcher.cpp.E8EBC8E055AF1CA5.idx  log_watcher.h.FA8E8042F0E6762F.idx  loki_client.cpp.4750C35D8BC5B4B9.idx  loki_client.h.D4D75A73FAF39F56.idx  main.cpp.136C7B4061922A11.idx  metrics.cpp.278D1226C6E09E98.idx  metrics.h.05E7F80FA6F7F9F8.idx  metrics_server.cpp.3C0FF4426CF4249A.idx  metrics_server.h.6E9D999111988DC8.idx
sidecar/.github/workflows/: build.yaml
sidecar/src/: config.h  log_entry.h  log_watcher.cpp  log_watcher.h  loki_client.cpp  loki_client.h  main.cpp  metrics.cpp  metrics.h  metrics_server.cpp  metrics_server.h
user-service/: .gitignore  Dockerfile  HELP.md  README.md  build.gradle
(+343 files in other folders)
